--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -1,18 +1,18 @@
 .button-search {
   background-color: #F90014;
   border-width: 0;
+  
 }
 
 .img {
   background-image: url("../../assets/img/background-search.jpg");
   background-position: center center;
-  height: auto;
-  /* max-width: ; */
+  width: 100%;
 }
 
 .search-box {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  padding-top: 100px;
+  padding-bottom: 100px;
     
 }
 
@@ -25,6 +25,7 @@
 .cards {
   max-width: 18rem;
   max-height: 20rem;
+  border: 0;
 }
 
 .bg-card {
