--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -1,5 +1,6 @@
 /*----Search----*/
 .button-search {
+  border: 0;
   background-color: #F90014;
   /*border-width: 0;*/
 }
@@ -8,6 +9,10 @@
   background-image: url("../../assets/img/background-search.jpg");
   background-position: center center;
   width: 100%;
+}
+.pesquisa {
+  border-color: #F90014; /* Cor da Borda */
+  color: #F90014;
 }
 
 .search-box {
@@ -18,25 +23,41 @@
 
 .results-box {
   padding: 50px 0;
-
 }
 /*----Card----*/
 
 .cards {
   max-width: 18rem;
   max-height: 20rem;
-  border: 0;
+  /* border: 0; */
   border-radius: 10px;
+  border-color: #F90014; /* Cor da Borda */
 }
 
 .bg-card {
-  background-color: #F90014;
+  /* background-color: #F90014;
+  background-color: #000; */
+  background-color: #ffffff;
+  
+}
+
+.text-color{
+  color: #F90014; /* Cor do Texto */
 }
 
 .nome-poke {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+}
+
+.box-type1 {
+  padding-bottom: 10px;
+}
+
+.box-tyoe2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .types {
