--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -29,9 +29,10 @@
 .cards {
   max-width: 18rem;
   max-height: 20rem;
-  /* border: 0; */
-  border-radius: 10px;
+  border-radius: 10px !important;
   border-color: #F90014; /* Cor da Borda */
+  /* border-style: outset; */
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
 }
 
 .bg-card {
@@ -49,6 +50,12 @@
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+  /* background-color: #fff12b;
+  border-radius: 10px; */
+}
+.card-color-header {
+  /* background-color: #ffea00; */
+  background-color: #efff47;
 }
 
 .box-type1 {
