Mudança simples na cor do card

--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -42,7 +42,7 @@
   
 }
 
-.text-color{
+.text-color {
   color: #F90014; /* Cor do Texto */
 }
 
@@ -55,7 +55,7 @@
 }
 .card-color-header {
   /* background-color: #ffea00; */
-  background-color: #efff47;
+  /* background-color: #efff47; */
 }
 
 .box-type1 {
